# traceweave-agent-runtime

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: ai_prompts_and_issue_log.md  architecture_answers.md  demo_script.md  design_notes.md
examples/: demo_context_compression.py  demo_session_isolation.py
examples/sample_docs/: agent_runtime_notes.md
src/traceweave_agent_runtime/: __init__.py  cli.py  config.py  web_app.py
src/traceweave_agent_runtime/llm/: base.py  fake_llm.py  openai_compatible.py
src/traceweave_agent_runtime/runtime/: actions.py  agent_runtime.py  compression.py  context_builder.py  errors.py  parser.py
src/traceweave_agent_runtime/store/: migrations.py  models.py  sqlite_store.py
src/traceweave_agent_runtime/tools/: base.py  calculator.py  datetime_tool.py  note.py  read_docs.py  registry.py  search.py  todo.py  weather.py
src/traceweave_agent_runtime/tracing/: trace_logger.py
src/traceweave_agent_runtime/utils/: json_utils.py  time_utils.py  token_estimator.py
tests/: conftest.py  test_agent_loop.py  test_calculator.py  test_compression.py  test_context_builder.py  test_llm_integration.py  test_parser.py  test_search.py  test_session_store.py  test_todo.py  test_tool_registry.py  test_trace_logger.py  test_web_app.py
