[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "traceweave-agent-runtime"
version = "0.1.0"
description = "A minimal self-built Python agent runtime with JSON action protocol, tools, SQLite sessions, context compression, and tracing."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "TraceWeave Contributors" }]
dependencies = [
  "openai>=1.0.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.7.0",
  "jsonschema>=4.22.0",
  "typer>=0.12.3",
  "rich>=13.7.1",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
traceweave = "traceweave_agent_runtime.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

